[svn r1500] Check for existence of geolite binary file before attempting to load it (#807) (BoNzO). Fixed sourcebans theme table header bg image not filling full cell if screen size too small (#812) (octo).

--- a/web/styles/sourcebans.css
+++ b/web/styles/sourcebans.css
@@ -120,7 +120,8 @@ img {
 
 .data-table-head  {
 	background-image:url(../styles/sourcebans/detail_head.png);
-	background-repeat: repeat-x;	
+	background-repeat: repeat-x;
+	background-color: #282828;
 	border:1px solid #AEAEAE;
 	color:#FFFFFF;
 	vertical-align: bottom; 
